Added project summary from README to HTML

--- a/index.html
+++ b/index.html
@@ -355,6 +355,23 @@ display: none;
 <h4 class="date">2025-03-16</h4>
 
 </div>
+    
+    <h2>Project Summary</h2>
+    <p>This project conducts a detailed analysis of Environmental, Social, and Governance (ESG) scores across different industries, utilizing regression models to identify the relationship between governance scores and total ESG scores. It demonstrates that governance plays a strong role in predicting total ESG scores, with a particular focus on industry-specific trends. By running linear regression models, the analysis shows significant positive relationships between governance and environmental, social, and total ESG scores. It also includes visualizations such as boxplots and bar charts to highlight sectoral variations in ESG performance.</p>
+
+    <h3>Key Findings:</h3>
+    <ul>
+        <li><strong>Governance and ESG Scores:</strong> A strong positive relationship exists between governance score and total ESG score, environmental score, and social score. Governance is a significant predictor for total ESG performance, with each 1-point increase in governance score corresponding to a 3.27-point increase in the total score.</li>
+        <li><strong>Industry Group Analysis:</strong> Different industries exhibit varying levels of performance across ESG dimensions. For example, the Energy & Utilities sector shows high scores across the board, while the Healthcare & Pharmaceuticals sector lags behind in environmental scores.</li>
+        <li><strong>Visualizations:</strong> Boxplots and bar charts were used to visualize ESG score distributions and average scores by industry, providing insights into sector-specific trends.</li>
+    </ul>
+
+    <p>This analysis offers valuable insights for companies looking to improve their ESG performance, guiding decisions related to governance practices and sustainability efforts.</p>
+
+    <h2>About</h2>
+    <p>This project conducts a detailed analysis of Environmental, Social, and Governance (ESG) scores across different industries, utilizing regression models to identify the relationship between governance scores and total ESG scores.</p>
+
+    <hr>
 
 
 <pre class="r"><code># Run the linear regression model for total score vs governance score
